fix: tag boxes overlapping for content with many tags (closes #130)

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -186,6 +186,7 @@ article {
 
     & > li {
       display: inline-block;
+      margin: 0.4em 0;
     }
     & > li > a {
       border-radius: 8px;
